--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "1.5.0",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^4.0.0",
     "webpack": "^5.97.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
